tdf#148035 sw content controls: cursor-move for runSdt only

For normal documents, just doing a Push/PopSdt on a block SDT
seems to work out-of-the-box for checkbox/dropdown/date content controls.
Apparently that is not the right way to do it though.

When I was trying it, the first control was always "lost".
This patch takes care of that. At the moment it does nothing
since only runSdt's even call push/pop, but at least
it might save some trouble later on when block SDTs are
turned into content controls.

Change-Id: I6bf68f296ca919dc09dec660c052ddbdb59d56bb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144007
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>